--- a/translations/ghost+intl-icu.de.xlf
+++ b/translations/ghost+intl-icu.de.xlf
@@ -202,7 +202,7 @@
     </unit>
     <unit id="T206xUy" name="Worauf warten Sie noch?">
       <notes>
-        <note category="from">[unused]</note>
+        <note category="from">php:///src/Controller/CustomAbstractController.php</note>
       </notes>
       <segment>
         <source>Worauf warten Sie noch?</source>
