--- a/translations/global+intl-icu.de.xlf
+++ b/translations/global+intl-icu.de.xlf
@@ -129,7 +129,7 @@
     </unit>
     <unit id="q8r8gtq" name="Titel">
       <notes>
-        <note category="from">twig:///templates/ajax/forum/editor.html.twig;twig:///templates/ajax/game/town/home.html.twig;twig:///templates/ajax/pm/view.html.twig</note>
+        <note category="from">php:///src/Service/LogTemplateHandler.php;twig:///templates/ajax/forum/editor.html.twig;twig:///templates/ajax/game/town/home.html.twig;twig:///templates/ajax/pm/view.html.twig</note>
       </notes>
       <segment>
         <source>Titel</source>
@@ -363,7 +363,7 @@
     </unit>
     <unit id="lUcvZQo" name="Hilfe">
       <notes>
-        <note category="from">db://ThreadTag;twig:///templates/ajax/ajax.html.twig;twig:///templates/ajax/forum/editor.html.twig;twig:///templates/ajax/game/beyond/beyond.html.twig;twig:///templates/ajax/game/beyond/desert.html.twig;twig:///templates/ajax/game/gazette_widget.html.twig;twig:///templates/ajax/game/jobs.html.twig;twig:///templates/ajax/game/town/bank.html.twig;twig:///templates/ajax/game/town/dashboard.html.twig;twig:///templates/ajax/game/town/dump.html.twig;twig:///templates/ajax/game/town/home.html.twig;twig:///templates/ajax/game/town/posts.html.twig;twig:///templates/ajax/game/town/town.html.twig;twig:///templates/ajax/ghost/create_town.html.twig;twig:///templates/ajax/pm/bubbles.html.twig;twig:///templates/ajax/public/disclaimer.html.twig;twig:///templates/ajax/soul/coalitions.html.twig;twig:///templates/ajax/soul/me.html.twig;twig:///templates/ajax/soul/season.html.twig;twig:///templates/ajax/soul/settings.html.twig;twig:///templates/ajax/soul/social.html.twig;twig:///templates/seo/welcome.html.twig</note>
+        <note category="from">db://ThreadTag;php:///src/Service/GazetteService.php;php:///src/Twig/Extensions.php;twig:///templates/ajax/ajax.html.twig;twig:///templates/ajax/forum/editor.html.twig;twig:///templates/ajax/game/beyond/beyond.html.twig;twig:///templates/ajax/game/beyond/desert.html.twig;twig:///templates/ajax/game/gazette_widget.html.twig;twig:///templates/ajax/game/jobs.html.twig;twig:///templates/ajax/game/town/bank.html.twig;twig:///templates/ajax/game/town/dashboard.html.twig;twig:///templates/ajax/game/town/dump.html.twig;twig:///templates/ajax/game/town/home.html.twig;twig:///templates/ajax/game/town/posts.html.twig;twig:///templates/ajax/game/town/town.html.twig;twig:///templates/ajax/ghost/create_town.html.twig;twig:///templates/ajax/pm/bubbles.html.twig;twig:///templates/ajax/public/disclaimer.html.twig;twig:///templates/ajax/soul/coalitions.html.twig;twig:///templates/ajax/soul/me.html.twig;twig:///templates/ajax/soul/season.html.twig;twig:///templates/ajax/soul/settings.html.twig;twig:///templates/ajax/soul/social.html.twig;twig:///templates/seo/welcome.html.twig</note>
       </notes>
       <segment>
         <source>Hilfe</source>
@@ -741,7 +741,7 @@
     </unit>
     <unit id="5lMuG5Z" name="Schere">
       <notes>
-        <note category="from">[unused]</note>
+        <note category="from">php:///src/Service/HTMLService.php</note>
       </notes>
       <segment>
         <source>Schere</source>
@@ -750,7 +750,7 @@
     </unit>
     <unit id="eVtWA3U" name="Stein">
       <notes>
-        <note category="from">[unused]</note>
+        <note category="from">php:///src/Service/HTMLService.php</note>
       </notes>
       <segment>
         <source>Stein</source>
@@ -759,7 +759,7 @@
     </unit>
     <unit id="vXPlKOG" name="Papier">
       <notes>
-        <note category="from">[unused]</note>
+        <note category="from">php:///src/Service/HTMLService.php</note>
       </notes>
       <segment>
         <source>Papier</source>
@@ -768,7 +768,7 @@
     </unit>
     <unit id="l2sp7PJ" name="Kopf">
       <notes>
-        <note category="from">[unused]</note>
+        <note category="from">php:///src/Service/HTMLService.php</note>
       </notes>
       <segment>
         <source>Kopf</source>
@@ -777,7 +777,7 @@
     </unit>
     <unit id="ZU60wKO" name="Zahl">
       <notes>
-        <note category="from">[unused]</note>
+        <note category="from">php:///src/Service/HTMLService.php</note>
       </notes>
       <segment>
         <source>Zahl</source>
@@ -786,7 +786,7 @@
     </unit>
     <unit id="ysTRqQl" name="{color} {value}">
       <notes>
-        <note category="from">[unused]</note>
+        <note category="from">php:///src/Service/HTMLService.php</note>
       </notes>
       <segment>
         <source>{color} {value}</source>
@@ -1200,7 +1200,7 @@
     </unit>
     <unit id="H5.W95P">
       <notes>
-        <note category="from">[unused]</note>
+        <note category="from">php:///src/Service/GazetteService.php</note>
       </notes>
       <segment>
         <source>Falls sich dieser Zustand auch um Mitternacht noch nicht geändert hat, findet kein Zombieangriff statt. Der Tag wird dann künstlich verlängert.</source>
@@ -1290,7 +1290,7 @@
     </unit>
     <unit id="WyLb36J" name="Deinen Rucksack umklammern">
       <notes>
-        <note category="from">[unused]</note>
+        <note category="from">php:///src/Controller/LandingController.php</note>
       </notes>
       <segment>
         <source>Deinen Rucksack umklammern</source>
@@ -1299,7 +1299,7 @@
     </unit>
     <unit id="My.PxrH" name="Schreien">
       <notes>
-        <note category="from">[unused]</note>
+        <note category="from">php:///src/Controller/LandingController.php</note>
       </notes>
       <segment>
         <source>Schreien</source>
@@ -1308,7 +1308,7 @@
     </unit>
     <unit id="pBxprfI" name="Rotz und Wasser heulen">
       <notes>
-        <note category="from">[unused]</note>
+        <note category="from">php:///src/Controller/LandingController.php</note>
       </notes>
       <segment>
         <source>Rotz und Wasser heulen</source>
@@ -1317,7 +1317,7 @@
     </unit>
     <unit id="0GmUL4e" name="Die Zähne zusammenbeißen">
       <notes>
-        <note category="from">[unused]</note>
+        <note category="from">php:///src/Controller/LandingController.php</note>
       </notes>
       <segment>
         <source>Die Zähne zusammenbeißen</source>
@@ -1326,7 +1326,7 @@
     </unit>
     <unit id="VgN.Hot" name="Eine Gitarre umarmen">
       <notes>
-        <note category="from">[unused]</note>
+        <note category="from">php:///src/Controller/LandingController.php</note>
       </notes>
       <segment>
         <source>Eine Gitarre umarmen</source>
@@ -1335,7 +1335,7 @@
     </unit>
     <unit id="PeITDbg" name="Nervös weinen">
       <notes>
-        <note category="from">[unused]</note>
+        <note category="from">php:///src/Controller/LandingController.php</note>
       </notes>
       <segment>
         <source>Nervös weinen</source>
@@ -1344,7 +1344,7 @@
     </unit>
     <unit id="Qi1mhHC" name="In Panik ausbrechen">
       <notes>
-        <note category="from">[unused]</note>
+        <note category="from">php:///src/Controller/LandingController.php</note>
       </notes>
       <segment>
         <source>In Panik ausbrechen</source>
@@ -1353,7 +1353,7 @@
     </unit>
     <unit id="BCykX16" name="Hinter dem Wrack verstecken">
       <notes>
-        <note category="from">[unused]</note>
+        <note category="from">php:///src/Controller/LandingController.php</note>
       </notes>
       <segment>
         <source>Hinter dem Wrack verstecken</source>
@@ -1362,7 +1362,7 @@
     </unit>
     <unit id="ho1chRn" name="Die Tür zuhalten">
       <notes>
-        <note category="from">[unused]</note>
+        <note category="from">php:///src/Controller/LandingController.php</note>
       </notes>
       <segment>
         <source>Die Tür zuhalten</source>
@@ -1371,7 +1371,7 @@
     </unit>
     <unit id="7ajXkGq" name="Unter der Decke verstecken">
       <notes>
-        <note category="from">[unused]</note>
+        <note category="from">php:///src/Controller/LandingController.php</note>
       </notes>
       <segment>
         <source>Unter der Decke verstecken</source>
@@ -1380,7 +1380,7 @@
     </unit>
     <unit id="F87Kxz9" name="Nach Hilfe schreien">
       <notes>
-        <note category="from">[unused]</note>
+        <note category="from">php:///src/Controller/LandingController.php</note>
       </notes>
       <segment>
         <source>Nach Hilfe schreien</source>
@@ -1389,7 +1389,7 @@
     </unit>
     <unit id="UC2Xq1w" name="&quot;Hilfe&quot; schreien">
       <notes>
-        <note category="from">[unused]</note>
+        <note category="from">php:///src/Controller/LandingController.php</note>
       </notes>
       <segment>
         <source>"Hilfe" schreien</source>
@@ -1398,7 +1398,7 @@
     </unit>
     <unit id="IzxXFRY" name="Unter einem Karton verstecken">
       <notes>
-        <note category="from">[unused]</note>
+        <note category="from">php:///src/Controller/LandingController.php</note>
       </notes>
       <segment>
         <source>Unter einem Karton verstecken</source>
@@ -1407,7 +1407,7 @@
     </unit>
     <unit id="68aHwRD" name="Unter dem Bett verstecken">
       <notes>
-        <note category="from">[unused]</note>
+        <note category="from">php:///src/Controller/LandingController.php</note>
       </notes>
       <segment>
         <source>Unter dem Bett verstecken</source>
@@ -1416,7 +1416,7 @@
     </unit>
     <unit id=".md5gGf" name="Ruhig bleiben...">
       <notes>
-        <note category="from">[unused]</note>
+        <note category="from">php:///src/Controller/LandingController.php</note>
       </notes>
       <segment>
         <source>Ruhig bleiben...</source>
@@ -1425,7 +1425,7 @@
     </unit>
     <unit id="LxIgZj7" name="In die Fötusstellung zusammenrollen">
       <notes>
-        <note category="from">[unused]</note>
+        <note category="from">php:///src/Controller/LandingController.php</note>
       </notes>
       <segment>
         <source>In die Fötusstellung zusammenrollen</source>
@@ -1434,7 +1434,7 @@
     </unit>
     <unit id="1uUvkyM" name="Alleine laut singen">
       <notes>
-        <note category="from">[unused]</note>
+        <note category="from">php:///src/Controller/LandingController.php</note>
       </notes>
       <segment>
         <source>Alleine laut singen</source>
@@ -1443,7 +1443,7 @@
     </unit>
     <unit id="V3ZrObm" name="Um dein Leben beten">
       <notes>
-        <note category="from">[unused]</note>
+        <note category="from">php:///src/Controller/LandingController.php</note>
       </notes>
       <segment>
         <source>Um dein Leben beten</source>
@@ -1452,7 +1452,7 @@
     </unit>
     <unit id="0HFdAAh" name="Die Backen halten">
       <notes>
-        <note category="from">[unused]</note>
+        <note category="from">php:///src/Controller/LandingController.php</note>
       </notes>
       <segment>
         <source>Die Backen halten</source>
@@ -1866,7 +1866,7 @@
     </unit>
     <unit id="M4kyeVr" name="Die Seite wird von Horden von Zombies belagert!">
       <notes>
-        <note category="from">[unused]</note>
+        <note category="from">php:///src/Controller/ExternalXML2Controller.php</note>
       </notes>
       <segment>
         <source>Die Seite wird von Horden von Zombies belagert!</source>
@@ -1875,7 +1875,7 @@
     </unit>
     <unit id="2gahlEk" name="Spielhilfe:">
       <notes>
-        <note category="from">[unused]</note>
+        <note category="from">php:///src/Twig/Extensions.php</note>
       </notes>
       <segment>
         <source>Spielhilfe:</source>
@@ -1920,7 +1920,7 @@
     </unit>
     <unit id="BFjRnfU" name="Nachrichten des Raben">
       <notes>
-        <note category="from">[unused]</note>
+        <note category="from">php:///src/Controller/Messages/MessageGlobalPMController.php</note>
       </notes>
       <segment>
         <source>Nachrichten des Raben</source>
@@ -1929,7 +1929,7 @@
     </unit>
     <unit id="zLJ.A.A" name="Anzeigen">
       <notes>
-        <note category="from">[unused]</note>
+        <note category="from">php:///src/Service/LogTemplateHandler.php</note>
       </notes>
       <segment>
         <source>Anzeigen</source>
@@ -1938,7 +1938,7 @@
     </unit>
     <unit id="NhpWriw" name="Dauerhaft">
       <notes>
-        <note category="from">[unused]</note>
+        <note category="from">php:///src/Service/LogTemplateHandler.php</note>
       </notes>
       <segment>
         <source>Dauerhaft</source>
@@ -1947,7 +1947,7 @@
     </unit>
     <unit id="Hwdoi.l" name="{n} Tage">
       <notes>
-        <note category="from">[unused]</note>
+        <note category="from">php:///src/Service/LogTemplateHandler.php</note>
       </notes>
       <segment>
         <source>{n} Tage</source>
@@ -1956,7 +1956,7 @@
     </unit>
     <unit id="1E2BbPr" name="1 Tag">
       <notes>
-        <note category="from">[unused]</note>
+        <note category="from">php:///src/Service/LogTemplateHandler.php</note>
       </notes>
       <segment>
         <source>1 Tag</source>
@@ -1965,7 +1965,7 @@
     </unit>
     <unit id="jLGnWab" name="{n} Stunden">
       <notes>
-        <note category="from">[unused]</note>
+        <note category="from">php:///src/Service/LogTemplateHandler.php</note>
       </notes>
       <segment>
         <source>{n} Stunden</source>
@@ -1974,7 +1974,7 @@
     </unit>
     <unit id="2iHBadX" name="1 Stunde">
       <notes>
-        <note category="from">[unused]</note>
+        <note category="from">php:///src/Service/LogTemplateHandler.php</note>
       </notes>
       <segment>
         <source>1 Stunde</source>
@@ -1983,7 +1983,7 @@
     </unit>
     <unit id="EJ4TXc1" name="{n} Minuten">
       <notes>
-        <note category="from">[unused]</note>
+        <note category="from">php:///src/Service/LogTemplateHandler.php</note>
       </notes>
       <segment>
         <source>{n} Minuten</source>
@@ -1992,7 +1992,7 @@
     </unit>
     <unit id="ST5ILqV" name="1 Minute">
       <notes>
-        <note category="from">[unused]</note>
+        <note category="from">php:///src/Service/LogTemplateHandler.php</note>
       </notes>
       <segment>
         <source>1 Minute</source>
@@ -2001,7 +2001,7 @@
     </unit>
     <unit id="OTEy7hr" name="{n} Sekunden">
       <notes>
-        <note category="from">[unused]</note>
+        <note category="from">php:///src/Service/LogTemplateHandler.php</note>
       </notes>
       <segment>
         <source>{n} Sekunden</source>
@@ -2010,7 +2010,7 @@
     </unit>
     <unit id="1rEgLVY" name="1 Sekunde">
       <notes>
-        <note category="from">[unused]</note>
+        <note category="from">php:///src/Service/LogTemplateHandler.php</note>
       </notes>
       <segment>
         <source>1 Sekunde</source>
@@ -2325,7 +2325,7 @@
     </unit>
     <unit id="hWzJnYc" name="und">
       <notes>
-        <note category="from">[unused]</note>
+        <note category="from">php:///src/Controller/InventoryAwareController.php</note>
       </notes>
       <segment>
         <source>und</source>
@@ -2334,7 +2334,7 @@
     </unit>
     <unit id="dotZmBq" name="HINWEIS: Diese Aktion ist nur in der Stadt möglich.">
       <notes>
-        <note category="from">[unused]</note>
+        <note category="from">php:///src/EventSubscriber/GateKeeperSubscriber.php</note>
       </notes>
       <segment>
         <source>HINWEIS: Diese Aktion ist nur in der Stadt möglich.</source>
@@ -2343,7 +2343,7 @@
     </unit>
     <unit id="GnItekT" name="HINWEIS: Diese Aktion ist nur in Übersee möglich.">
       <notes>
-        <note category="from">[unused]</note>
+        <note category="from">php:///src/EventSubscriber/GateKeeperSubscriber.php</note>
       </notes>
       <segment>
         <source>HINWEIS: Diese Aktion ist nur in Übersee möglich.</source>
@@ -2757,7 +2757,7 @@
     </unit>
     <unit id="YNxQwvO">
       <notes>
-        <note category="from">[unused]</note>
+        <note category="from">php:///src/Controller/Messages/MessageGlobalPMController.php</note>
       </notes>
       <segment>
         <source>{user} hat dich geblockt und wurde daher aus der Liste der Empfänger für diese Nachricht gestrichen.</source>
@@ -2766,7 +2766,7 @@
     </unit>
     <unit id="QZZefQX" name="{users} und {last_user}">
       <notes>
-        <note category="from">[unused]</note>
+        <note category="from">php:///src/Controller/Messages/MessageGlobalPMController.php</note>
       </notes>
       <segment>
         <source>{users} und {last_user}</source>
@@ -2775,7 +2775,7 @@
     </unit>
     <unit id="yJCPgfF">
       <notes>
-        <note category="from">[unused]</note>
+        <note category="from">php:///src/Controller/Messages/MessageGlobalPMController.php</note>
       </notes>
       <segment>
         <source>{users} haben dich geblockt und wurden daher aus der Liste der Empfänger für diese Nachricht gestrichen.</source>
@@ -2784,7 +2784,7 @@
     </unit>
     <unit id="tgTK6TI" name="Du hast diesen Spieler auf deine Blacklist gesetzt.">
       <notes>
-        <note category="from">[unused]</note>
+        <note category="from">php:///src/Controller/Soul/SoulController.php</note>
       </notes>
       <segment>
         <source>Du hast diesen Spieler auf deine Blacklist gesetzt.</source>
@@ -2793,7 +2793,7 @@
     </unit>
     <unit id="C4uSYMq" name="Du hast diesen Spieler von deiner Blacklist genommen.">
       <notes>
-        <note category="from">[unused]</note>
+        <note category="from">php:///src/Controller/Soul/SoulController.php</note>
       </notes>
       <segment>
         <source>Du hast diesen Spieler von deiner Blacklist genommen.</source>
@@ -2955,7 +2955,7 @@
     </unit>
     <unit id="APXGipg" name="Keinen Grund angeben">
       <notes>
-        <note category="from">twig:///templates/ajax/forum/posts.html.twig;twig:///templates/ajax/game/town/posts.html.twig;twig:///templates/ajax/pm/view.html.twig</note>
+        <note category="from">php:///src/Service/CrowService.php;twig:///templates/ajax/forum/posts.html.twig;twig:///templates/ajax/game/town/posts.html.twig;twig:///templates/ajax/pm/view.html.twig</note>
       </notes>
       <segment>
         <source>Keinen Grund angeben</source>
@@ -3560,7 +3560,7 @@
     </unit>
     <unit id="6uluArv" name="Icons">
       <notes>
-        <note category="from">[unused]</note>
+        <note category="from">php:///src/Service/LogTemplateHandler.php</note>
       </notes>
       <segment>
         <source>Icons</source>
@@ -3569,7 +3569,7 @@
     </unit>
     <unit id="PkaUwqL" name="Einzigartige Titel">
       <notes>
-        <note category="from">[unused]</note>
+        <note category="from">php:///src/Service/LogTemplateHandler.php</note>
       </notes>
       <segment>
         <source>Einzigartige Titel</source>
@@ -3578,7 +3578,7 @@
     </unit>
     <unit id="WzoxwcK" name="Einzigartige Icons">
       <notes>
-        <note category="from">[unused]</note>
+        <note category="from">php:///src/Service/LogTemplateHandler.php</note>
       </notes>
       <segment>
         <source>Einzigartige Icons</source>
