--- a/translations/items+intl-icu.de.xlf
+++ b/translations/items+intl-icu.de.xlf
@@ -3,7 +3,7 @@
   <file id="items.de">
     <unit id="lKc.7ub" name="Du hast folgendes gewürfelt: {dc1}, {dc2} und {dc3}.">
       <notes>
-        <note category="from">[unused]</note>
+        <note category="from">php:///src/Service/ActionHandler.php</note>
       </notes>
       <segment>
         <source>Du hast folgendes gewürfelt: {dc1}, {dc2} und {dc3}.</source>
@@ -12,7 +12,7 @@
     </unit>
     <unit id="yeqnW9g">
       <notes>
-        <note category="from">[unused]</note>
+        <note category="from">php:///src/Service/ActionHandler.php</note>
       </notes>
       <segment>
         <source>Wow, du hast einen Trippel geworfen. Das hat so viel Spaß gemacht, dass du 1AP gewinnst!</source>
@@ -21,7 +21,7 @@
     </unit>
     <unit id="rmGP8Al">
       <notes>
-        <note category="from">[unused]</note>
+        <note category="from">php:///src/Service/ActionHandler.php</note>
       </notes>
       <segment>
         <source>Wow, du hast eine Straße geworfen. Das hat so viel Spaß gemacht, dass du 1AP gewinnst!</source>
@@ -30,7 +30,7 @@
     </unit>
     <unit id="Gk9gFU8">
       <notes>
-        <note category="from">[unused]</note>
+        <note category="from">php:///src/Service/ActionHandler.php</note>
       </notes>
       <segment>
         <source>Wow, du hast beim ersten Versuch eine 4-2-1 geworfen. Das hat so viel Spaß gemacht, dass du 1AP gewinnst!</source>
@@ -39,7 +39,7 @@
     </unit>
     <unit id="087WiZd" name="Nicht schlecht, du hast einen Pasch geworfen.">
       <notes>
-        <note category="from">[unused]</note>
+        <note category="from">php:///src/Service/ActionHandler.php</note>
       </notes>
       <segment>
         <source>Nicht schlecht, du hast einen Pasch geworfen.</source>
@@ -48,7 +48,7 @@
     </unit>
     <unit id="oGFgAoX" name="Was für ein Spaß!">
       <notes>
-        <note category="from">[unused]</note>
+        <note category="from">php:///src/Service/ActionHandler.php</note>
       </notes>
       <segment>
         <source>Was für ein Spaß!</source>
@@ -57,7 +57,7 @@
     </unit>
     <unit id="zcpU78C">
       <notes>
-        <note category="from">[unused]</note>
+        <note category="from">php:///src/Service/ActionHandler.php</note>
       </notes>
       <segment>
         <source>Du ziehst eine Karte... und stellst fest, dass dein Name darauf mit Blut geschrieben steht! Du erstarrst vor Schreck!</source>
@@ -66,7 +66,7 @@
     </unit>
     <unit id="NcJ93EV">
       <notes>
-        <note category="from">[unused]</note>
+        <note category="from">php:///src/Service/ActionHandler.php</note>
       </notes>
       <segment>
         <source>Du ziehst eine Karte... und stellst fest, dass du die Karte mit den Spielregeln gezogen hast! Das erheitert dich so sehr, dass du 1AP gewinnst.</source>
@@ -75,7 +75,7 @@
     </unit>
     <unit id="kPlE9C6">
       <notes>
-        <note category="from">[unused]</note>
+        <note category="from">php:///src/Service/ActionHandler.php</note>
       </notes>
       <segment>
         <source>Das muss ein Zeichen sein! In dieser Welt ist kein Platz für Moral... du erhälst 1AP.</source>
@@ -84,7 +84,7 @@
     </unit>
     <unit id="i6dx5ZQ" name="Das Symbol der Liebe... dein Herz schmilzt dahin und du erhälst 1AP.">
       <notes>
-        <note category="from">[unused]</note>
+        <note category="from">php:///src/Service/ActionHandler.php</note>
       </notes>
       <segment>
         <source>Das Symbol der Liebe... dein Herz schmilzt dahin und du erhälst 1AP.</source>
@@ -93,7 +93,7 @@
     </unit>
     <unit id="9tVy8rd">
       <notes>
-        <note category="from">[unused]</note>
+        <note category="from">php:///src/Service/ActionHandler.php</note>
       </notes>
       <segment>
         <source>Mit deiner Gitarre hast du die Stadt gerockt! Die Bürger haben {ap} AP erhalten.</source>
@@ -102,7 +102,7 @@
     </unit>
     <unit id="6MESOb8" name="Trotz intensiver Suche hast du nichts verwertbares gefunden...">
       <notes>
-        <note category="from">[unused]</note>
+        <note category="from">php:///src/Service/ActionHandler.php</note>
       </notes>
       <segment>
         <source>Trotz intensiver Suche hast du nichts verwertbares gefunden...</source>
@@ -3558,7 +3558,7 @@
     </unit>
     <unit id="Kl2AzsC" name="Du ziehst eine Karte... es ist: {color} {value}.">
       <notes>
-        <note category="from">[unused]</note>
+        <note category="from">php:///src/Service/ActionHandler.php</note>
       </notes>
       <segment>
         <source>Du ziehst eine Karte... es ist: {color} {value}.</source>
@@ -3567,7 +3567,7 @@
     </unit>
     <unit id="1Qhkwmq" name="Äußerst erfrischend, und sogar mit einer leichten Note von Cholera.">
       <notes>
-        <note category="from">[unused]</note>
+        <note category="from">php:///src/Service/ActionHandler.php</note>
       </notes>
       <segment>
         <source>Äußerst erfrischend, und sogar mit einer leichten Note von Cholera.</source>
@@ -3576,7 +3576,7 @@
     </unit>
     <unit id=".jOYrxS" name="Immer noch besser als das Zeug, was die Köche in der Stadt zubereiten....">
       <notes>
-        <note category="from">[unused]</note>
+        <note category="from">php:///src/Service/ActionHandler.php</note>
       </notes>
       <segment>
         <source>Immer noch besser als das Zeug, was die Köche in der Stadt zubereiten....</source>
@@ -6564,7 +6564,7 @@
     </unit>
     <unit id="XfbyTTX" name="Kaputt">
       <notes>
-        <note category="from">twig:///templates/ajax/game/item_tooltip.html.twig</note>
+        <note category="from">php:///src/Service/LogTemplateHandler.php;twig:///templates/ajax/game/item_tooltip.html.twig</note>
       </notes>
       <segment>
         <source>Kaputt</source>
@@ -6888,7 +6888,7 @@
     </unit>
     <unit id="s1_qYeB" name="Kreuz">
       <notes>
-        <note category="from">[unused]</note>
+        <note category="from">php:///src/Service/HTMLService.php</note>
       </notes>
       <segment>
         <source>Kreuz</source>
@@ -6897,7 +6897,7 @@
     </unit>
     <unit id="XnWnfMP" name="Pik">
       <notes>
-        <note category="from">[unused]</note>
+        <note category="from">php:///src/Service/HTMLService.php</note>
       </notes>
       <segment>
         <source>Pik</source>
@@ -6906,7 +6906,7 @@
     </unit>
     <unit id="Rduezfz" name="Herz">
       <notes>
-        <note category="from">[unused]</note>
+        <note category="from">php:///src/Service/HTMLService.php</note>
       </notes>
       <segment>
         <source>Herz</source>
@@ -6915,7 +6915,7 @@
     </unit>
     <unit id="2P.dMD0" name="Karo">
       <notes>
-        <note category="from">[unused]</note>
+        <note category="from">php:///src/Service/HTMLService.php</note>
       </notes>
       <segment>
         <source>Karo</source>
@@ -6924,7 +6924,7 @@
     </unit>
     <unit id="cIg8Tyq" name="Bube">
       <notes>
-        <note category="from">[unused]</note>
+        <note category="from">php:///src/Service/HTMLService.php</note>
       </notes>
       <segment>
         <source>Bube</source>
@@ -6933,7 +6933,7 @@
     </unit>
     <unit id="82FCAix" name="Dame">
       <notes>
-        <note category="from">[unused]</note>
+        <note category="from">php:///src/Service/HTMLService.php</note>
       </notes>
       <segment>
         <source>Dame</source>
@@ -6942,7 +6942,7 @@
     </unit>
     <unit id="5IgH0Ms" name="König">
       <notes>
-        <note category="from">[unused]</note>
+        <note category="from">php:///src/Service/HTMLService.php</note>
       </notes>
       <segment>
         <source>König</source>
@@ -6951,7 +6951,7 @@
     </unit>
     <unit id="Dq2RYL6" name="Ass">
       <notes>
-        <note category="from">[unused]</note>
+        <note category="from">php:///src/Service/HTMLService.php</note>
       </notes>
       <segment>
         <source>Ass</source>
@@ -7428,7 +7428,7 @@
     </unit>
     <unit id="UhcYCoM">
       <notes>
-        <note category="from">db://AffectMessage</note>
+        <note category="from">db://AffectMessage;php:///src/Controller/Town/TownController.php;php:///src/Service/ActionHandler.php</note>
       </notes>
       <segment>
         <source>Ein Opfer der Großen Seuche zu sein hat dir diesmal nicht viel gebracht... und es sieht nicht gut aus...</source>
@@ -7437,7 +7437,7 @@
     </unit>
     <unit id="OyENKXh">
       <notes>
-        <note category="from">db://AffectMessage</note>
+        <note category="from">db://AffectMessage;php:///src/Controller/Town/TownController.php;php:///src/Service/ActionHandler.php</note>
       </notes>
       <segment>
         <source>Da hast du wohl Glück gehabt... Als Opfer der Großen Seuche bist du diesmal um eine unangenehme Infektion herumgekommen.</source>
@@ -8103,7 +8103,7 @@
     </unit>
     <unit id="GUA4Vaf">
       <notes>
-        <note category="from">[unused]</note>
+        <note category="from">php:///src/Service/ActionHandler.php</note>
       </notes>
       <segment>
         <source>Schlechte Nachrichten, du hättest das nicht herunterschlucken sollen... du hast dir eine Infektion eingefangen!</source>
