Updated FR global

--- a/translations/global+intl-icu.fr.xlf
+++ b/translations/global+intl-icu.fr.xlf
@@ -777,7 +777,7 @@
       <notes>
         <note category="german">Papier</note>
         <note category="from">php:///src/Service/HTMLService.php</note>
-        <note category="state">new</note>
+        <note category="state">translated</note>
       </notes>
       <segment>
         <source>Papier</source>
