--- a/translations/buildings+intl-icu.en.xlf
+++ b/translations/buildings+intl-icu.en.xlf
@@ -1044,7 +1044,7 @@
     <unit id="cdTPlT5" name="Scanner">
       <notes>
         <note category="german">Scanner</note>
-        <note category="state">new</note>
+        <note category="state">translated</note>
         <note category="from">db://BuildingPrototype</note>
       </notes>
       <segment>
@@ -1595,7 +1595,7 @@
     <unit id="MwGqzqF" name="Altar">
       <notes>
         <note category="german">Altar</note>
-        <note category="state">new</note>
+        <note category="state">translated</note>
         <note category="from">db://BuildingPrototype</note>
       </notes>
       <segment>
@@ -1646,7 +1646,7 @@
     <unit id="3zCLWcZ" name="Labyrinth">
       <notes>
         <note category="german">Labyrinth</note>
-        <note category="state">new</note>
+        <note category="state">translated</note>
         <note category="from">db://BuildingPrototype</note>
       </notes>
       <segment>
@@ -2087,7 +2087,7 @@
     <unit id="Pnjrt1t" name="Hammam">
       <notes>
         <note category="german">Hammam</note>
-        <note category="state">new</note>
+        <note category="state">translated</note>
         <note category="from">db://BuildingPrototype</note>
       </notes>
       <segment>
