--- a/translations/gazette+intl-icu.en.xlf
+++ b/translations/gazette+intl-icu.en.xlf
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<xliff xmlns="urn:oasis:names:tc:xliff:document:2.0" version="2.0" srcLang="en-US-POSIX" trgLang="en">
+<xliff xmlns="urn:oasis:names:tc:xliff:document:2.0" version="2.0" srcLang="de" trgLang="en">
   <file id="gazette.en">
     <unit id="IuJ39ML">
       <notes>
