--- a/translations/gazette+intl-icu.es.xlf
+++ b/translations/gazette+intl-icu.es.xlf
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<xliff xmlns="urn:oasis:names:tc:xliff:document:2.0" version="2.0" srcLang="en-US-POSIX" trgLang="es">
+<xliff xmlns="urn:oasis:names:tc:xliff:document:2.0" version="2.0" srcLang="de" trgLang="es">
   <file id="gazette.es">
     <unit id="IuJ39ML">
       <notes>
