--- a/translations/items+intl-icu.de.xlf
+++ b/translations/items+intl-icu.de.xlf
@@ -3594,7 +3594,7 @@
     </unit>
     <unit id="AfDbNyS" name="Hierfür bist du zu weit von der Stadt entfernt ...">
       <notes>
-        <note category="from">[unused]</note>
+        <note category="from">db://Requirement</note>
       </notes>
       <segment>
         <source>Hierfür bist du zu weit von der Stadt entfernt ...</source>
