--- a/translations/help+intl-icu.en.xlf
+++ b/translations/help+intl-icu.en.xlf
@@ -8622,11 +8622,11 @@ To contact the server administrators, write a message to the <a x-group-connect=
       <notes>
         <note category="german">Ausgerüstete Gegenstände werden in deinem &lt;strong&gt;Rucksack&lt;/strong&gt; aufbewahrt.</note>
         <note category="from">twig:///templates/ajax/game/town/home.html.twig</note>
-        <note category="state">new</note>
+        <note category="state">madeup</note>
       </notes>
       <segment>
         <source>Ausgerüstete Gegenstände werden in deinem &lt;strong&gt;Rucksack&lt;/strong&gt; aufbewahrt.</source>
-        <target><![CDATA[Ausgerüstete Gegenstände werden in deinem <strong>Rucksack</strong> aufbewahrt.]]></target>
+        <target><![CDATA[Equipped items are stored in your <strong>backpack</strong>.]]></target>
       </segment>
     </unit>
   </file>
